--- a/mjw/manifest/package.xml
+++ b/mjw/manifest/package.xml
@@ -49,5 +49,9 @@
         <members>*</members>
         <name>Flexipage</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>Profile</name>
+    </types>
     <version>59.0</version>
 </Package>
