--- a/mjw/manifest/package.xml
+++ b/mjw/manifest/package.xml
@@ -53,5 +53,9 @@
         <members>*</members>
         <name>Profile</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>Flow</name>
+    </types>
     <version>59.0</version>
 </Package>
